# darwin

./: .gitignore  .project  Fix_CM-730_communication.txt  Raspberri_Overclock.txt  ReadMe_Coral_EdgeTPU.txt  add_servo.rtf  bash_commands.rtf  ~$sh_commands.rtf
Linux/project/webots/: CMakeLists.txt  Makefile  TD3_conservative_training_script.py  TD3_parallel_training_script.py  TD3_training_script.py  darwin_env.py  darwin_model.onnx  darwin_rl_agent.cpp  darwin_training_script.py  export_model.py  my_trained_model.pth  pytorch_training_script.py  webots_tcp_server  webots_tcp_server.cpp
Linux/project/webots/controllers/my_walk/: main.cpp  my_walk.cpp
Linux/project/webots/lib/: Action.d  ColorFinder.d  DARwInOPDirectoryManager.d  DARwInOPGaitManager.d  DARwInOPMotionManager.d  DARwInOPMotionTimerManager.d  DARwInOPVisionManager.d  Image.d  ImgProcess.d  JointData.d  Kinematics.d  LinuxMotionTimer.d  MX28.d  Matrix.d  MotionStatus.d  Point.d  Vector.d  Walking.d  minIni.d
Linux/project/webots/ppo_darwin_tensorboard/: events.out.tfevents.1749399432.DESKTOP-UAE71HC.20000.0  progress.csv
Linux/project/webots/ppo_darwin_tensorboard/PPO_0/: events.out.tfevents.1749397140.DESKTOP-UAE71HC.24068.0
Linux/project/webots/ppo_darwin_tensorboard/PPO_1/: events.out.tfevents.1749359253.DGYoga7.29012.0  events.out.tfevents.1749369721.DGYoga7.18460.0  events.out.tfevents.1749380662.DESKTOP-UAE71HC.19024.0
Linux/project/webots/ppo_darwin_tensorboard/PPO_2/: events.out.tfevents.1749365336.DGYoga7.14452.0  events.out.tfevents.1749376138.DGYoga7.13552.0  events.out.tfevents.1749382924.DESKTOP-UAE71HC.19704.0
Linux/project/webots/ppo_darwin_tensorboard/PPO_3/: events.out.tfevents.1749365459.DGYoga7.11020.0
Linux/project/webots/ppo_darwin_tensorboard/PPO_4/: events.out.tfevents.1749366224.DGYoga7.27068.0
Linux/project/webots/rl_webots_training/: darwin_env_balance.py  darwin_env_base.py  darwin_env_get_up.py  darwin_env_grasp.py  darwin_env_walk_forward.py  darwin_hybrid_agent.cpp  darwin_rl_agent.cpp  darwin_rl_agent_FSM.cpp  export_model_to_ONNX.py  test_agent.py  test_agent_ppo.py  test_agent_sac.py  train_balance.py  train_balance_ppo.py  train_balance_sac.py  train_getup.py  train_grasp.py  train_walk_td3.py
Linux/project/webots/td3_darwin_tensorboard_no_head/: events.out.tfevents.1749410490.DESKTOP-UAE71HC.26800.0  progress.csv
Linux/project/webots/td3_darwin_tensorboard_stable/: events.out.tfevents.1749406077.DESKTOP-UAE71HC.21336.0  events.out.tfevents.1749407561.DESKTOP-UAE71HC.18048.0  events.out.tfevents.1749407784.DESKTOP-UAE71HC.21780.0  progress.csv
Linux/project/webots/transfer/keyboard/: keyboard.cpp  (+1 more)
(+161 files in other folders)
